--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Update IP List
 
 on:
-  #schedule:
+  schedule:
   - cron: '0 */3 * * *' # 每3小时运行一次
   workflow_dispatch: # 允许手动触发
   #push: # 允许提交触发
